--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,5 +24,11 @@ a:hover {
 }
 
 .container {
-  background-color: blueviolet;
+  max-width: 1366px;
+  min-height: 100vh;
+  margin: 0 auto;
+  padding: 0 60px;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
 }
