--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,3 @@
-
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -10,17 +8,29 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background-color: black;
-  color: white;
 }
 
 a {
-  text-decoration: none; 
+  text-decoration: none;
   color: inherit;
 }
 
 a:hover {
   color: gold;
+}
+
+.theme{
+  transition: 1s all ease;
+}
+
+.light {
+  background-color: white;
+  color: #111;
+}
+
+.dark {
+  background-color: #111;
+  color: #bbb;
 }
 
 .container {
@@ -30,5 +40,5 @@ a:hover {
   padding: 0 60px;
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
+  justify-content: space-between;
 }
