--- a/src/components/DarckModelToggle/page.module.css
+++ b/src/components/DarckModelToggle/page.module.css
@@ -10,6 +10,15 @@
     position: relative;
     cursor: pointer;
   }
+
+  .container:hover {
+    border: 1.5px solid gold;
+
+  }
+
+  .ball:hover {
+    background-color: gold;
+  }
   
   .icon{
     font-size: 12px;
