--- a/src/app/blog/[id]/page.module.css
+++ b/src/app/blog/[id]/page.module.css
@@ -1,9 +1,8 @@
-.container {
-}.container {
-}
+
 
 .top {
   display: flex;
+  gap: 20px;
 }
 
 .info {
@@ -37,12 +36,16 @@
   flex: 1;
   height: 300px;
   position: relative;
+  padding-bottom: 100px;
 }
 
 .image {
   object-fit: cover;
 }
 
+.image1{
+  margin-top: 100px;
+}
 .content {
   margin-top: 50px;
   font-size: 20px;
