--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -13,7 +13,7 @@
 
 .title {
   font-size: 72px;
-  background: linear-gradient(to bottom, #194c33, #bbb);
+  background: linear-gradient(to bottom, #08f381, #09410e);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
